// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField basic component can override InputLabelProps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
        >
          <label
            class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
            data-shrink="false"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-51 MuiInput-input-36"
              data-testid="textbox"
              name="hello"
              required=""
              type="text"
              value="something here"
            />
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
      >
        <label
          class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
          data-shrink="false"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-51 MuiInput-input-36"
            data-testid="textbox"
            name="hello"
            required=""
            type="text"
            value="something here"
          />
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextField basic component can override helperText 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
        >
          <label
            class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
            data-shrink="true"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-51 MuiInput-input-36"
              data-testid="textbox"
              name="hello"
              required=""
              type="text"
              value="something here"
            />
          </div>
          <p
            class="MuiFormHelperText-root-58 MuiFormHelperText-filled-64 MuiFormHelperText-required-65"
          >
            Help, not an error
          </p>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
      >
        <label
          class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
          data-shrink="true"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-51 MuiInput-input-36"
            data-testid="textbox"
            name="hello"
            required=""
            type="text"
            value="something here"
          />
        </div>
        <p
          class="MuiFormHelperText-root-58 MuiFormHelperText-filled-64 MuiFormHelperText-required-65"
        >
          Help, not an error
        </p>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextField basic component renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
        >
          <label
            class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
            data-shrink="true"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-51 MuiInput-input-36"
              data-testid="textbox"
              name="hello"
              required=""
              type="text"
              value="something here"
            />
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
      >
        <label
          class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
          data-shrink="true"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-51 MuiInput-input-36"
            data-testid="textbox"
            name="hello"
            required=""
            type="text"
            value="something here"
          />
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextField basic component requires a default value 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-error-22 MuiInputLabel-error-9 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="false"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11 MuiFormLabel-error-22 MuiInputLabel-error-9"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-error-46 MuiInput-error-32 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="true"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="text"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root-58 MuiFormHelperText-error-59 MuiFormHelperText-required-65"
      >
        something for testing
      </p>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to date 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="date"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to datetime-local 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="datetime-local"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to email 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="email"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to month 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="month"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to number 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="number"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to password 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="password"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to tel 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="tel"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to text 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="text"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to time 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="time"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to url 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="url"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField basic component text field input values sets its type to week 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          data-testid="textbox"
          name="hello"
          required=""
          type="week"
          value="something here"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField submit button tests renders the helper text because no error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="false"
      >
        Hello world
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-51 MuiInput-input-36"
          name="hello"
          required=""
          type="text"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root-58 MuiFormHelperText-required-65"
      >
        omg helper text
      </p>
    </div>
    ,
    <button
      class="MuiButtonBase-root-95 MuiButton-root-66 MuiButton-contained-74 MuiButton-containedPrimary-75"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-98"
      />
    </button>
  </form>
</div>
`;

exports[`TextField submit button tests submit shows submit error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-error-22 MuiInputLabel-error-9 MuiFormLabel-filled-23 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="true"
      >
        Hello world
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11 MuiFormLabel-error-22 MuiInputLabel-error-9"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-error-46 MuiInput-error-32 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="true"
          class="MuiInputBase-input-51 MuiInput-input-36"
          name="hello"
          required=""
          type="text"
          value="foo"
        />
      </div>
      <p
        class="MuiFormHelperText-root-58 MuiFormHelperText-error-59 MuiFormHelperText-filled-64 MuiFormHelperText-required-65"
      >
        submit error
      </p>
    </div>
    ,
    <button
      class="MuiButtonBase-root-95 MuiButton-root-66 MuiButton-contained-74 MuiButton-containedPrimary-75"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-98"
      />
    </button>
  </form>
</div>
`;

exports[`TextField submit button tests submit shows validation error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-fullWidth-5"
    >
      <label
        class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-error-22 MuiInputLabel-error-9 MuiFormLabel-required-24 MuiInputLabel-required-10"
        data-shrink="false"
      >
        Hello world
        <span
          class="MuiFormLabel-asterisk-25 MuiInputLabel-asterisk-11 MuiFormLabel-error-22 MuiInputLabel-error-9"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-40 MuiInput-root-26 MuiInput-underline-31 MuiInputBase-error-46 MuiInput-error-32 MuiInputBase-fullWidth-50 MuiInput-fullWidth-35 MuiInputBase-formControl-41 MuiInput-formControl-27"
      >
        <input
          aria-invalid="true"
          class="MuiInputBase-input-51 MuiInput-input-36"
          name="hello"
          required=""
          type="text"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root-58 MuiFormHelperText-error-59 MuiFormHelperText-required-65"
      >
        is not best
      </p>
    </div>
    ,
    <button
      class="MuiButtonBase-root-95 MuiButton-root-66 MuiButton-contained-74 MuiButton-containedPrimary-75"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-67"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-98"
      />
    </button>
  </form>
</div>
`;
